--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
